--- a/style.css
+++ b/style.css
@@ -47,23 +47,27 @@ p {
     display:flex;
     flex-wrap: wrap;
     width: 1100px;
-    justify-content: start;
-    margin:30px;
+    margin-top:30px;
 }
 
 article {
+    justify-content: center;
     background-color: white;
-    padding: ;
+    padding:0 px;
     width: 400px;
-    margin: ;
+    height: 500px;
+    margin-left:50px ;
 }
 
 .article-but {
+    justify-content:  center;
     text-decoration: none;
-    background-color: grey;
+    background-color: rgb(179, 14, 55);
     color: white;
     font-size: 24px;
     text-align: center;
+    margin-left:50px ;
+    margin-top: 0px;
     padding: 10px 75px 10px 75px;
 }
 
@@ -81,4 +85,48 @@ footer a {
 
 footer p {
     font-size: 24px;
+}
+
+.margin {
+    margin-top:30px ;
+}
+
+.text {
+    margin-left:70px;
+}
+
+.article-nope {
+    justify-content:  center;
+    text-decoration: none;
+    background-color: rgb(180, 41, 17);
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    margin-left:50px ;
+    margin-top: 0px;
+    padding: 10px 75px 10px 75px;
+}
+
+.article-rar {
+    justify-content:  center;
+    text-decoration: none;
+    background-color: rgb(119, 112, 20);
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    margin-left:50px ;
+    margin-top: 0px;
+    padding: 10px 75px 10px 75px;
+}
+
+.article-sus {
+    justify-content:  center;
+    text-decoration: none;
+    background-color: rgb(8, 83, 112);
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    margin-left:50px ;
+    margin-top: 0px;
+    padding: 10px 75px 10px 75px;
 }
